@@ -5,6 +5,8 @@ update-manager (1:0.121) UNRELEASEDkarmic; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - when guessing missing meta-packages stop after
       the first one was found
+    - use internal _lookupPkgRecord() instead of 
+      pkg._lookupRecord
   * DistUpgrade/DistUpgradeQuirks.py:
     - move the kubuntu-kde4-desktop key dependency transition
       detection to the from_hardy quirks handler (LP: #368459)
